# poker-coach

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Makefile  README.md
backend/: alembic.ini  pyproject.toml
backend/src/poker_coach/: ids.py  main.py  settings.py  translation.py
backend/src/poker_coach/analytics/: __init__.py  villain_stats.py
backend/src/poker_coach/api/: app.py  deps.py  oracle_factory.py  schemas.py  sweeper.py
backend/tests/: conftest.py  test_smoke.py
backend/tests/analytics/: test_villain_stats.py
backend/tests/api/: test_cost.py  test_engine_routes.py  test_history.py  test_lifecycle.py  test_prompts_routes.py  test_sessions_icm.py  test_translate.py
backend/tests/db/: test_migrations.py
backend/tests/engine/: test_ante.py  test_deck.py  test_independent_stacks.py  test_invariants.py  test_rules.py  test_showdown.py
backend/tests/oracle/: fixtures.py  test_advice_round_trip.py  test_anthropic_oracle.py  test_openai_oracle.py  test_presets.py  test_pricing.py  test_strategy_validator.py  test_system_prompt.py  test_tool_schema.py
backend/tests/prompts/: test_coach_v1_render.py  test_coach_v2_render.py  test_coach_v3_render.py  test_no_villain_leak.py  test_renderer.py
backend/tests/translation/: test_translation.py
rta/: .gitignore  README.md  pyproject.toml
rta/demo/mock_html/: game.js  index.html  styles.css
rta/paper/: results.md  threat_model.md
rta/paper/notebooks/: detection_analysis.md
rta/profiles/: mock_html.yaml
rta/scripts/: benchmark_mock.py  build_mock_card_templates.py  capture_mock_screenshot.py
rta/src/poker_rta/: __init__.py  cli.py  record.py  runner.py
rta/src/poker_rta/capture/: grab.py  (+2 more)
rta/tests/: conftest.py  test_record.py  test_runner.py
rta/tests/calibration/: test_painter.py  test_preview.py  test_scripted_frames.py  test_template_capture.py  test_validate.py
rta/tests/capture/: test_grab.py  test_window.py
rta/tests/client/: test_coach_client.py  test_engine_endpoints.py  test_stream.py
rta/tests/cv/: test_buttons.py  test_cards.py  test_ocr.py  test_pipeline.py
rta/tests/detection/: test_gto.py  test_timing.py
rta/tests/evaluation/: test_metrics.py
rta/tests/overlay/: test_confidence.py  test_history_panel.py  test_movable.py  test_reasoning.py  test_replay.py  test_state_panel.py  test_status.py  test_window.py
rta/tests/parity/: conftest.py  golden_coach_v2.txt  scripted_hand.py  test_prompt_parity.py  test_state_parity.py
rta/tests/platform_profile/: test_model.py
rta/tests/profile/: test_io.py
rta/tests/state/: conftest.py  test_action_infer.py  test_decision_gate.py  test_hand_start.py  test_session.py  test_stabilizer.py
(+166 files in other folders)
